5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4186/executions/1644_2443.log
== TEST (2019-04-11 17:33:59) 
-- CODE:
from math import*
a= float(input("raio: "))
b= float(input("altura: "))
c= input("1/2")
var= pi*x**2*(3*r-x)/3
vco= (4*pi*r**3)/3
d= var - vco

if= (c=="1"):
	print(round(var,4))
else: 
	print(round(d, 4))


-- ERROR:
File "XXXX", line 9
    if= (c=="1"):
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 17:34:06) 
-- CODE:
from math import*
a= float(input("raio: "))
b= float(input("altura: "))
c= input("1/2")
var= pi*x**2*(3*r-x)/3
vco= (4*pi*r**3)/3
d= var - vco

if (c=="1"):
	print(round(var,4))
else: 
	print(round(d, 4))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    var= pi*x**2*(3*r-x)/3
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 17:34:12) 
-- CODE:
from math import*
a= float(input("raio: "))
b= float(input("altura: "))
c= input("1/2")
var= pi*x**2*(3*r-x)/3
vco= (4*pi*r**3)/3
d= var - vco

if (c=="1"):
	print(round(var,4))
else: 
	print(round(d, 4))


-- EXECUTION TIME:
0.182424
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1644/2443/main.py", line 5, in <module>
    var= pi*x**2*(3*r-x)/3
NameError: name 'x' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 17:34:18) 
-- CODE:
from math import*
a= float(input("raio: "))
b= float(input("altura: "))
c= input("1/2")
var= pi*x**2*(3*r-x)/3
vco= (4*pi*r**3)/3
d= var - vco

if (c=="1"):
	print(round(var,4))
else: 
	print(round(d, 4))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    var= pi*x**2*(3*r-x)/3
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 17:34:56) 
-- CODE:
from math import*
a= float(input("raio: "))
b= float(input("altura: "))
c= input("1/2")
var= pi*b**2*(3*r-b)/3
vco= (4*pi*r**3)/3
d= var - vco

if (c=="1"):
	print(round(var,4))
else: 
	print(round(d, 4))


-- EXECUTION TIME:
0.144745
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1644/2443/main.py", line 5, in <module>
    var= pi*b**2*(3*r-b)/3
NameError: name 'r' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 17:34:58) 
-- CODE:
from math import*
a= float(input("raio: "))
b= float(input("altura: "))
c= input("1/2")
var= pi*b**2*(3*r-b)/3
vco= (4*pi*r**3)/3
d= var - vco

if (c=="1"):
	print(round(var,4))
else: 
	print(round(d, 4))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    var= pi*b**2*(3*r-b)/3
NameError: name 'r' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 17:35:28) 
-- CODE:
from math import*
a= float(input("raio: "))
b= float(input("altura: "))
c= input("1/2")
var= pi*b**2*(3*a-b)/3
vco= (4*pi*a**3)/3
d= var - vco

if (c=="1"):
	print(round(var,4))
else: 
	print(round(d, 4))


-- EXECUTION TIME:
0.126835
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:
9.0257
-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:
-290.3408
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 17:35:31) 
-- CODE:
from math import*
a= float(input("raio: "))
b= float(input("altura: "))
c= input("1/2")
var= pi*b**2*(3*a-b)/3
vco= (4*pi*a**3)/3
d= var - vco

if (c=="1"):
	print(round(var,4))
else: 
	print(round(d, 4))


-- OUTPUT:
9.0257
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 17:35:37) 
-- CODE:
from math import*
a= float(input("raio: "))
b= float(input("altura: "))
c= input("1/2")
var= pi*b**2*(3*a-b)/3
vco= (4*pi*a4**3)/3
d= var - vco

if (c=="1"):
	print(round(var,4))
else: 
	print(round(d, 4))


-- EXECUTION TIME:
0.153163
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1644/2443/main.py", line 6, in <module>
    vco= (4*pi*a4**3)/3
NameError: name 'a4' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 17:35:40) 
-- CODE:
from math import*
a= float(input("raio: "))
b= float(input("altura: "))
c= input("1/2")
var= pi*b**2*(3*a-b)/3
vco= (4*pi*a4**3)/3
d= var - vco

if (c=="1"):
	print(round(var,4))
else: 
	print(round(d, 4))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    vco= (4*pi*a4**3)/3
NameError: name 'a4' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 17:35:45) 
-- CODE:
from math import*
a= float(input("raio: "))
b= float(input("altura: "))
c= input("1/2")
var= pi*b**2*(3*a-b)/3
vco= (4*pi*a4**3)/3
d= var - vco

if (c=="1"):
	print(round(var,4))
else: 
	print(round(d, 4))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    vco= (4*pi*a4**3)/3
NameError: name 'a4' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 17:36:06) 
-- CODE:
from math import*
a= float(input("raio: "))
b= float(input("altura: "))
c= input("1/2")
var= pi*b**2*(3*a-b)/3
vco= (4*pi*a**3)/3
d= var - vco

if (c=="1"):
	print(round(var,4))
else: 
	print(round(d, 4))


-- EXECUTION TIME:
0.198508
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:
9.0257
-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:
-290.3408
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 17:36:08) 
-- CODE:
from math import*
a= float(input("raio: "))
b= float(input("altura: "))
c= input("1/2")
var= pi*b**2*(3*a-b)/3
vco= (4*pi*a**3)/3
d= var - vco

if (c=="1"):
	print(round(var,4))
else: 
	print(round(d, 4))


-- OUTPUT:
9.0257
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 17:36:25) 
-- CODE:
from math import*
a= float(input("raio: "))
b= float(input("altura: "))
c= input("1/2")
var= pi*b**2*(3*a-b)/3
vco= (4*pi*a**3)/3
d= var - vco

if (c=="1"):
	print(round(var,4))
else: 
	print(round(d, 4))


-- OUTPUT:
9.0257
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 21:30:23) 
-- CODE:
from math import*
a= float(input("raio: "))
b= float(input("altura: "))
c= input("1/2")
var= pi*b**2*(3*a-b)/3
vco= (4*pi*a**3)/3
d= var - vco

if (c=="1"):
	print(round(var,4))
else: 
	print(round(d, 4))


-- OUTPUT:
9.0257
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 21:30:56) 
-- CODE:
from math import*
a= float(input("raio: "))
b= float(input("altura: "))
c= input("1/2")
var= pi*b**2*(3*a-b)/3
vco= (4*pi*a**3)/3
d= var - vco

if (c=="1"):
	print(round(var,4))
else: 
	print(round(d, 4))


-- OUTPUT:
9.0257
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 21:31:22) 
-- CODE:
from math import*
a= float(input("raio: "))
b= float(input("altura: "))
c= input("1/2")
var= pi*b**2*(3*a-b)/3
vco= (4*pi*a**3)/3
d= var - vco

if (c=="1"):
	print(round(var,4))
else: 
	print(round(d, 4))


-- EXECUTION TIME:
0.238893
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:
9.0257
-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:
-290.3408
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:59:47) 
-- CODE:
from math import*
a= float(input("raio: "))
b= float(input("altura: "))
c= input("1/2:")
var= pi*b**2*(3*a-b)/3
vco= (4*pi*a**3)/3
d= var - vco

if (c=="1"):
	print(round(var,4))
else: 
	print(round(d, 4))


-- OUTPUT:
9.0257
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 12:00:26) 
-- CODE:
from math import*
a= float(input("raio: "))
b= float(input("altura: "))
c= input("1/2:")
var= pi*b**2*(3*a-b)/3
vco= (4*pi*a**3)/3
d= var - vco

if (c=="1"):
	print(round(var,4))
else: 
	print(round(d, 4))


-- OUTPUT:
9.0257
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 12:00:33) 
-- CODE:
from math import*
a= float(input("raio: "))
b= float(input("altura: "))
c= input("1/2:")
var= pi*b**2*(3*a-b)/3
vco= (4*pi*a**3)/3
d= var - vco

if (c=="1"):
	print(round(var,4))
else: 
	print(round(d, 4))


-- OUTPUT:
9.0257
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 12:00:53) 
-- CODE:
from math import*
a= float(input("raio: "))
b= float(input("altura: "))
c= input("1/2:")
var= pi*b**2*(3*a-b)/3
vco= (4*pi*a**3)/3
d= var - vco

if (c=="1"):
	print(round(var,4))
else: 
	print(round(d, 4))


-- EXECUTION TIME:
0.210817
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:
9.0257
-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:
-290.3408
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 12:02:51) 
-- CODE:
from math import *
a= float(input(" digite raio: "))
b= float(input("digite altura: "))
c= input("opcao desejada (1/2):")
var= pi*b**2*(3*a - b)/3
vco= (4*pi*a**3)/3
d= var - vco

if (c=="1"):
	print(round(var,4))
else: 
	print(round(d, 4))


-- EXECUTION TIME:
0.144613
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:
9.0257
-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:
-290.3408
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 12:02:55) 
-- CODE:
from math import *
a= float(input(" digite raio: "))
b= float(input("digite altura: "))
c= input("opcao desejada (1/2):")
var= pi*b**2*(3*a - b)/3
vco= (4*pi*a**3)/3
d= var - vco

if (c=="1"):
	print(round(var,4))
else: 
	print(round(d, 4))


-- OUTPUT:
9.0257
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 12:03:37) 
-- CODE:
from math import *
a= float(input(" digite raio: "))
b= float(input("digite altura: "))
c= input("opcao desejada (1/2):")
var= pi*b**2*(3*a - b)/3
vco= (4*pi*a**3)/3
d= var - vco

if (c == "1"):
	print(round(var,4))
else: 
	print(round(d, 4))


-- EXECUTION TIME:
0.198582
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:
9.0257
-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:
-290.3408
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 12:11:48) 
-- CODE:
from math import *
a= float(input(" digite raio: "))
b= float(input("digite altura: "))
c= input("opcao desejada (1/2):")
var= pi*b**2*(3*a - b)/3
vc= (4*pi*a**3)/3
d= var - vc

if (c == "1"):
	print(round(var,4))
else: 
	print(round(d, 4))


-- EXECUTION TIME:
0.104879
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:
9.0257
-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:
-290.3408
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 12:12:12) 
-- CODE:
from math import *
a= float(input(" digite raio: "))
b= float(input("digite altura: "))
c= input("opcao desejada (1/2):")
var= pi*b**2*(3*a - b)/3
vc= (4*pi*a**3)/3
d= vc - var

if (c == "1"):
	print(round(var,4))
else: 
	print(round(d, 4))


-- EXECUTION TIME:
0.13854
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:
9.0257
-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:
290.3408
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
